# bazel_rust_prost

./: .gitignore  BUILD.bazel  LICENSE  MODULE.bazel
sample/: BUILD.bazel  complex_world.rs  hello_lib.rs
sample/proto/complex/: BUILD.bazel  message.proto  types.proto
sample/proto/simple/: BUILD.bazel  simple.proto
sample/tests/: test_lib.rs
toolchain/: BUILD.bazel
