# Example of a Rust Library that creates a package to be used in Python
# Copyright (c) 2024 Radiant Science Inc.

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

# create a single rust proxy per library
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")

rust_library(
    name = "hello_lib",
    srcs = ["hello_lib.rs"],
    deps = [
        "//sample/proto/simple:simple_rs",
        "@crates//:prost-types",
    ],
)

rust_binary(
    name = "hello_world",
    srcs = ["hello_world.rs"],
    deps = [
        ":hello_lib",
        "@crates//:anyhow",
    ],
)

rust_binary(
    name = "complex",
    srcs = ["complex_world.rs"],
    deps = [
        ":hello_lib",
        "//sample/proto/complex:complex_rs",
        "@crates//:anyhow",
    ],
)

rust_test(
    name = "hello_lib_test",
    srcs = ["tests/test_lib.rs"],
    deps = [":hello_lib"],
)
