# compile proto libraries to python
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//rust:defs.bzl", "rust_library_group")
# load("@rules_rust//proto/protobuf:defs.bzl", "rust_proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")


# set default visibility to public
package(default_visibility = ["//visibility:public"])


proto_library(
    name="message",
    srcs = ["simple.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

rust_prost_library(
    name = "message_rs",
    proto = ":message",
)

proto_library(
    name = "simple",
    deps = [
        ":message",
    ],
)

rust_library_group(
    name = "simple_rs",
    deps = [
        ":message_rs",
    ],
)

# NOTE: this does not compile: https://github.com/bazelbuild/rules_rust/issues/2808
# rust_prost_library(
#     name = "simple_rs",
#     proto = ":simple",
# )